# Diophant

./: CMakeLists.txt  conanfile.py  diophant.cpp  lambda.cpp
include/: Diophant.hpp  lambda.hpp
include/Diophant/: data.hpp  evaluate.hpp  expression.hpp  lambda.hpp  machine.hpp  make.hpp  match.hpp  parser.hpp  pattern.hpp  precedence.hpp  replace.hpp  root.hpp  statement.hpp  symbol.hpp  type.hpp  types.hpp  value.hpp
include/Diophant/expressions/: apply.hpp  binary.hpp  builder.hpp  call.hpp  expressions.hpp  function.hpp  if.hpp  lambda.hpp  let.hpp  null.hpp  pattern.hpp  symbol.hpp  unary.hpp  values.hpp
include/lambda/: reader.hpp
source/Diophant/: evaluate.cpp  expression.cpp  lambda.cpp  machine.cpp  match.cpp  parser.cpp  pattern.cpp  replace.cpp  statement.cpp  symbol.cpp  type.cpp  value.cpp
source/Diophant/expressions/: apply.cpp  builder.cpp  lambda.cpp  pattern.cpp  symbol.cpp  values.cpp
test/: CMakeLists.txt  testParse.cpp  testPrograms.cpp
